--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ ndarray = "0.15"
 image = "0.24"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
+log = "0.4"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
