--- a/crates/hvat_ui/Cargo.toml
+++ b/crates/hvat_ui/Cargo.toml
@@ -5,5 +5,18 @@ edition = "2021"
 
 [dependencies]
 hvat_gpu = { path = "../hvat_gpu" }
-winit = "0.30"
+winit = "0.29"
+pollster = "0.3"
 thiserror = "1.0"
+bytemuck = { version = "1.20", features = ["derive"] }
+wgpu_text = "27.0.1"
+log = "0.4"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wgpu = { version = "27", features = ["webgl"] }
+web-sys = { version = "0.3", features = ["console"] }
+console_log = { version = "1.0", features = ["color"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+wgpu = "27"
+env_logger = "0.11"
