--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ image = "0.24"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 log = "0.4"
+web-time = "1.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
