--- a/crates/hvat_ui/Cargo.toml
+++ b/crates/hvat_ui/Cargo.toml
@@ -9,7 +9,8 @@ winit = "0.29"
 pollster = "0.3"
 thiserror = "1.0"
 bytemuck = { version = "1.20", features = ["derive"] }
-wgpu_text = "27.0.1"
+glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
+cosmic-text = "0.14"
 log = "0.4"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
