--- a/crates/hvat_ui/Cargo.toml
+++ b/crates/hvat_ui/Cargo.toml
@@ -15,8 +15,10 @@ log = "0.4"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wgpu = { version = "27", features = ["webgl"] }
-web-sys = { version = "0.3", features = ["console"] }
+web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement"] }
 console_log = { version = "1.0", features = ["color"] }
+wasm-bindgen-futures = "0.4"
+wasm-bindgen = "0.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wgpu = "27"
