--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ hvat_gpu = { path = "crates/hvat_gpu" }
 ndarray = "0.15"
 image = "0.24"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "1.0"
 log = "0.4"
 web-time = "1.1"
