--- a/crates/hvat_ui/Cargo.toml
+++ b/crates/hvat_ui/Cargo.toml
@@ -3,9 +3,17 @@ name = "hvat_ui"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "hvat_ui_example"
+path = "src/main.rs"
+
+[[example]]
+name = "image_viewer"
+path = "examples/image_viewer.rs"
+
 [dependencies]
 hvat_gpu = { path = "../hvat_gpu" }
-winit = "0.29"
+winit = "0.30"
 pollster = "0.3"
 thiserror = "1.0"
 bytemuck = { version = "1.20", features = ["derive"] }
