--- a/crates/hvat_gpu/Cargo.toml
+++ b/crates/hvat_gpu/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hvat_gpu"
 version = "0.1.0"
 edition = "2021"
+license = "AGPL-3.0"
 
 [dependencies]
 bytemuck = { version = "1.14", features = ["derive"] }
