--- a/crates/hvat_ui/Cargo.toml
+++ b/crates/hvat_ui/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hvat_ui"
 version = "0.1.0"
 edition = "2021"
+license = "AGPL-3.0"
 
 [[bin]]
 name = "hvat_ui_example"
@@ -42,7 +43,8 @@ tiny-skia = "0.11"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wgpu = { version = "27", features = ["webgl"] }
-web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement"] }
+web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement", "HtmlElement", "ResizeObserver", "ResizeObserverEntry", "ResizeObserverSize", "DomRectReadOnly"] }
+js-sys = "0.3"
 console_log = { version = "1.0", features = ["color"] }
 wasm-bindgen-futures = "0.4"
 wasm-bindgen = "0.2"
