--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ hvat_gpu = { path = "crates/hvat_gpu" }
 
 # Core module dependencies
 ndarray = "0.15"
-image = "0.24"
+image = "0.25"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 quick-xml = { version = "0.31", features = ["serialize"] }
@@ -45,6 +45,11 @@ web-sys = { version = "0.3", features = [
     "Element",
     "HtmlElement",
     "ProgressEvent",
+    # File System Access API for folder picker
+    "FileSystemDirectoryHandle",
+    "FileSystemFileHandle",
+    "FileSystemHandle",
+    "FileSystemHandleKind",
 ] }
 winit = "0.29"
 wgpu = "27"
