--- a/crates/hvat_ui/Cargo.toml
+++ b/crates/hvat_ui/Cargo.toml
@@ -43,7 +43,34 @@ tiny-skia = "0.11"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wgpu = { version = "27", features = ["webgl"] }
-web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement", "HtmlElement", "ResizeObserver", "ResizeObserverEntry", "ResizeObserverSize", "DomRectReadOnly"] }
+web-sys = { version = "0.3", features = [
+    "console",
+    "Window",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "HtmlElement",
+    "ResizeObserver",
+    "ResizeObserverEntry",
+    "ResizeObserverSize",
+    "DomRectReadOnly",
+    # Drag-drop support
+    "DragEvent",
+    "DataTransfer",
+    "DataTransferItem",
+    "DataTransferItemList",
+    "File",
+    "FileList",
+    "FileReader",
+    "ProgressEvent",
+    "EventTarget",
+    "Event",
+    # FileSystem API for folder drag-drop
+    "FileSystemEntry",
+    "FileSystemFileEntry",
+    "FileSystemDirectoryEntry",
+    "FileSystemDirectoryReader",
+] }
 js-sys = "0.3"
 console_log = { version = "1.0", features = ["color"] }
 wasm-bindgen-futures = "0.4"
@@ -52,3 +79,4 @@ wasm-bindgen = "0.2"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wgpu = "27"
 env_logger = "0.11"
+image = { version = "0.25", default-features = false, features = ["png"] }
