add config import and export

--- a/crates/hvat_ui/Cargo.toml
+++ b/crates/hvat_ui/Cargo.toml
@@ -37,6 +37,7 @@ bytemuck = { version = "1.20", features = ["derive"] }
 glyphon = { git = "https://github.com/grovesNL/glyphon", branch = "main" }
 cosmic-text = "0.14"
 log = "0.4"
+serde = { version = "1.0", features = ["derive"] }
 web-time = "1.1"
 resvg = "0.45"
 tiny-skia = "0.11"
