--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,8 @@ web-sys = { version = "0.3", features = [
     "FileSystemHandleKind",
     # LocalStorage for config persistence
     "Storage",
+    # Performance API for timing
+    "Performance",
 ] }
 winit = "0.29"
 wgpu = "27"
