--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ hvat_ui = { path = "crates/hvat_ui" }
 hvat_gpu = { path = "crates/hvat_gpu" }
 
 # Core module dependencies
-ndarray = "0.15"
+ndarray = "0.17"
+ndarray-npy = { version = "0.10", default-features = false }
 image = "0.25"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
